# Puch-ai-hackathon

./: main.py  pyproject.toml  requirements.txt
app/: llm.py  puch_ai.py  utils.py
deployment/: mcp_starter.py
